@@ -325,7 +325,7 @@ END ?>
 			value_attr = "id"
 			default_values = [country_id]
 			options = country_list
-			name = "country_id_t"
+			name = "country_id"
 			label = text('Country') 
 	} ?> 
 </div>
