@@ -12,9 +12,19 @@ Supported Presently
 Changelog for LedgerSMB 1.3.6
 * Including xelatex templates under directory templates/xedemo (Chris T)
 * Fix for company name in order entry (David B)
+* Corrected UI dropdown box issue on ar/ap transaction screen (Herman V)
+* Corrected minor workflow issues on AR/AP transactions (Herman V)
+* Corrected permissions for users creating employee records (Chris T)
+* Corrected error when trying to save employee location as new (Chris T)
+* Corrected save as new overwriting existing for vendors/customers (Chris T)
+* Logging improvements (Herman V)
+* Fixed SQL errors in Goods and Services/All Items report (David B)
+* Corrected issue saving country in contact.html (Pongracz I)
 
 Chris T is Chris Travers
 David B is David Bandel
+Herman V is Herman Vierendeels
+Pongracz I is Pongracz Istvan
 
 Changelog for LedgerSMB 1.3.5
 * Fixing Menu and Permissions bug 3430820 (Chris T)
